endpointの名前とhandlerの関数の名前をちゃんとした
